# dasst

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements  setup.cfg  setup.py
dasst/: __init__.py
dasst/core/: orbit.py  particle.py  population.py
dasst/distributions/: __init__.py  distribution.py  kernel_density_estimation.py  scipy.py  scipy_distribution.py
dasst/ejection_models/: __init__.py
dasst/ejection_models/comets/: __init__.py  sublimation.py
dasst/functions/: datetime.py  kepler.py
dasst/persistence/: __init__.py  converter.py  file_system.py  file_system_binary.py  gzip_binary.py  list_converter.py  logger.py  numpy_converter.py  persistence.py  wrapper.py
dasst/profiling/: __init__.py  execution_time.py  logging.py  memory.py
dev/: debugging_example.py  execution_time_example.py  kde_example.py  persistence_compress.py  persistence_example.py  persistence_file_stream.py  plot_elems.py  resampling_example.py  vision_of_dasst_SORTS.py
dev/similarity/: compare.py  requirements.txt
doc/source/: api.rst  changelog.rst  conf.py  distributions.rst  index.rst  persistence.rst
doc/source/_ext/: uml.py
doc/source/_templates/: myglobaltoc.html  mylocaltoc.html
doc/source/auto_gallery/: index.rst  plot_custom_distribution.ipynb  plot_custom_distribution.rst  plot_example.ipynb  plot_example.py.md5  plot_example.rst  sg_execution_times.rst
doc/source/tutorial/: index.rst  persistence.rst
docs/: index.md
docs/assets/: style.css
docs/source/: api.rst  index.rst  persistence.rst
docs/source/_templates/: logo.html
docs/source/auto_gallery/: plot_custom_distribution.py  plot_custom_distribution.py.md5  plot_example.ipynb  plot_example.py
docs/source/changelog/: 0.0.1.rst
docs/source/dev/: index.rst
docs/source/tutorial/: functions.rst
examples/: .gitignore  compare_crifo_whipple.py  crifo_meteoroid_ejection.py  d_criteria.py  execution_time_example.py  initial_distribution_simulation.py  loading_kernels.py  mass_production_vaubaillon.py  memory_profile_example.py  persistence_example.py  plot_example.py  rodionov_gas_ice_temperature.py  whipple_meteoroid_ejection.py
examples/configs/: bodies_config.toml  pop_comet.toml  sim_config.toml
scripts/: generate_api_docs.py
src/dasst/: __init__.py  constants.py  frames.py  populations.py  profiling.py  simulation.py  test_example.py  time_utils.py  types.py  version.py
src/dasst/configs/: bodies_config.toml
src/dasst/core/: particle_generator.py
src/dasst/distributions/: __init__.py  distribution.py  kernel_density_estimation.py  resampling.py
src/dasst/functions/: ca_criteria.py  d_criteria.py
src/dasst/orbit_determination/: __init__.py  methods.py
src/dasst/persistence/: __init__.py  converter.py  file_system_binary.py  gzip_binary.py  (+4 more)
tests/: test_functions_datetime.py  test_import.py  test_simulation.py  test_sublimation.py
tests/configs/: pop_comet.toml  sim_config.toml
(+120 files in other folders)
