[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dasst"
description = "Dynamical Astronomy Statistical Simulations Toolbox"
version = "0.0.0"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
]
maintainers = [
    {name = "Daniel Kastinen", email = "daniel.kastinen@irf.se"},
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "tqdm >= 4.32.1",
    "scipy >= 1.3.0",
    "numpy >= 1.16.4",
    "matplotlib >= 3.1.0",
    "pandas >= 2.0.3",
    "pyorb >= 0.5.4",
    "astropy >= 5.3.1",
    "rebound >= 4.4.2",
    "reboundx >= 4.2.2",
]

[project.optional-dependencies]
develop = [
    "pytest",
    "flake8",
    "wheel",
    "build",
    "twine",
    "pytest-cov",
    "matplotlib",
    "ipykernel",
    "radon",
    "numpydoc",
    "pre-commit",
    "black",
    "auditwheel",
    "patchelf",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Documentation = "https://danielk.developer.irf.se/dasst/"
Repository = "https://github.com/danielk333/dasst"

[tool.black]
line-length = 100
