[metadata]
name = dasst
description = Dynamical Astronomy Statistical Simulations Toolbox
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = GNU-GPLv3
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/dasst
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Linux

[options]
python_requires = >=3.7
install_requires =
    tqdm >= 4.32.1
    scipy >= 1.3.0
    numpy >= 1.16.4
    matplotlib >= 3.1.0
    pandas >= 2.0.3
    pyorb >= 0.5.4
    astropy >= 5.3.1

[options.extras_require]
develop =
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    pytest-cov >= 4.1.0
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8
    ipykernel >= 6.9.1
    radon >= 5.1.0
    numpydoc >= 1.2
    pre-commit > 3.0.0
    black >= 23.3.0

[flake8]
ignore = D203,E251,E126,E226,W504,W503,W605
max-line-length = 100
exclude = src/dasst/__pycache__,src/dasst/__init__.py,src/dasst/**/__init__.py

[radon]
exclude = test_*.py
cc_min = B

[tool:pytest]
addopts = -v
testpaths = tests
